Hopefully last rework of MVC Pattern
- Controller handles all of the FXML loading now
- Module-Enum handles static files now
- If someone wants to create a new module, they just have to add each MVC class and then add an entry to the Module-Enum
- Added new Start-Label